[package]
name = "clerk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.154", features = ["derive"] }
colored = "2.0.0"
directories = "4.0.1"
serde_json = "1.0.94"
toml = "0.7.2"
serde_repr = "0.1.11"
exitcode = "1.1.2"
# termsize = "0.1.6"
